fix for mobile ui issue where content doesn't stretch full height

--- a/src/styles/scss/_projects.scss
+++ b/src/styles/scss/_projects.scss
@@ -212,9 +212,9 @@
   position: fixed;
   top: 64px; // leaves space for nav
   left: 0;
+  right: 0;
+  bottom: 0;
   width: 100vw;
-  height: calc(100vh - 64px);
-  height: calc(100dvh - 64px);
   background: $background-color;
   z-index: 1000;
   display: none;
